# getting-started-tensorflow2

./: README.md  pyproject.toml
tests/: test_getting_started_tensorflow.py
