[tool.poetry]
name = "getting-started-tensorflow"
version = "0.1.0"
description = ""
authors = ["Shunya Ueta <shunyaueta01@gmail.com>"]

license = "MIT"

readme = 'README.md'  # Markdown files are supported

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyter_contrib_nbextensions = "^0.5.1"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyter = "^1.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
